--- a/public/style/estilo.css
+++ b/public/style/estilo.css
@@ -43,11 +43,44 @@ h3 {
   color: white;
 }
 
+.img-responsive, .thumbnail a>img, .thumbnail>img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+img {
+    vertical-align: middle;
+}
+img {
+    border: 0;
+}
+
+*{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 p {
 	width: 960px;
 	margin: 40px auto;
 	color: #000;
-    line-height: 200%;
+
+}
+
+a, a:visited {
+	color: #000;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+ul {
+	list-style: none;
 }
 .scrollblock {
 	position: relative;
@@ -67,3 +100,7 @@ p {
 .block-create h2 { color: #FFF; }
 .block-create p { color: #FFF; }
 .block-create code { background-color: #000; color: #FFF; }
+.block-trees { background-color: #4c0d09; }
+.block-trees h2 { color: #d3b2af; }
+.block-trees p { color: #d3b2af; }
+.block-trees code { color: #000; background-color: white; }
